create login route successfully

--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
 NODE_ENV=development
+PORT=5000
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=123456
 DB_NAME=donor_db
 
-PORT=5000
+JWT_SECRET=donation-collection-system
+JWT_ACCESS_EXPIRATION=2d
+JWT_REFRESH_SECRET=donation-collection-refresh
+JWT_REFRESH_EXPIRATION=120d
