--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
 NODE_ENV=development
 PORT=5000
+# DB_HOST=138.201.23.126
+# DB_PORT=3306
+# DB_USER=kazirahat_root
+# DB_PASSWORD=ll!6T*8CQs1]
+# DB_NAME=kazirahat_donor_db
 
 DB_HOST=localhost
 DB_PORT=3306
